[gd_scene load_steps=6 format=3 uid="uid://dobuvrpseysyh"]

[ext_resource type="PackedScene" uid="uid://0v5uh6w4xsmk" path="res://MyTextureButton/MyTextureButton.tscn" id="1_jmicx"]
[ext_resource type="Texture2D" uid="uid://2cltxvaj0b57" path="res://Menu/LevelSelectMenu/area.png" id="2_1chwx"]
[ext_resource type="Texture2D" uid="uid://c7b6fsricbkvd" path="res://Menu/LevelSelectMenu/areaChoose.png" id="3_5vgc6"]
[ext_resource type="Texture2D" uid="uid://dxjabqrksqxwe" path="res://Menu/LevelSelectMenu/areaLock.png" id="4_hi1nr"]
[ext_resource type="Script" path="res://Menu/LevelSelectMenu/LevelPreview.gd" id="5_usown"]

[node name="LevelPreview" instance=ExtResource("1_jmicx")]
texture_normal = ExtResource("2_1chwx")
texture_pressed = ExtResource("2_1chwx")
texture_hover = ExtResource("3_5vgc6")
texture_disabled = ExtResource("4_hi1nr")
script = ExtResource("5_usown")
level_path = ""
level_detail_path = "res://Menu/LevelDetail/LevelDetail.tscn"

[node name="PreviewImage" type="TextureRect" parent="." index="0"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -17.0
offset_right = 25.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="OxygenNeedLabel" type="Label" parent="." index="1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.964706, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/line_spacing = -2
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="OxygenGetLabel" type="Label" parent="." index="2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -5.0
offset_right = 29.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.964706, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/line_spacing = -2
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="after_play_press_sound" from="." to="." method="_on_after_play_press_sound"]
